Fixing overflow hero imgs with caption

--- a/style.css
+++ b/style.css
@@ -112,7 +112,6 @@ header .hero .imgs {
   position: relative;
   width: 600px;
   height: 510px;
-  overflow: hidden;
 }
 header .hero .imgs img {
   position: absolute;
